--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
+    "engines": {
+        "node": "14.x"
+    },
     "scripts": {
         "server": "nodemon server.js --ignore 'client /'",
         "client": "npm run start --prefix ../client",
