--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "node": "18.x"
     },
     "scripts": {
-        "server": "nodemon server.js --ignore 'client /'",
+        "start": "node server.js",
+        "server": "nodemon server.js",
         "client": "npm run start --prefix ../client",
         "dev": "concurrently \"npm run server \" \"npm run client\""
     },
