--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,15 @@
         {
             "src": "./server.js",
             "use": "@vercel/node"
+        },
+        {
+            "rewrites": [{ "source": "/(.*)", "destination": "/" }]
         }
     ],
     "routes": [
         {
-            "src": "/api/(.*)",
-            "dest": "/server.js"
-        },
-        {
             "src": "/(.*)",
-            "dest": "/index.html"
+            "destination": "/"
         }
     ]
 }
