--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "start": "node app.js",
         "server": "nodemon app.js",
+        "build": "node build --output public",
         "client": "npm run start --prefix ../client",
         "dev": "concurrently \"npm run server \" \"npm run client\""
     },
