--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "node": "14.x"
     },
     "scripts": {
-        "start": "node app.js",
-        "server": "nodemon app.js",
+        "start": "node index.js",
+        "server": "nodemon index.js",
         "build": "node build --output public",
         "client": "npm run start --prefix ../client",
         "dev": "concurrently \"npm run server \" \"npm run client\""
